# OminiX-API

./: .env-ominix  .gitignore  ACLGRAPH_CONTRACT.md  AGENT_HANDOFF.md  ASCEND_API_BRIDGE_CONTRACT.md  CANNFUSION_CONTRACT.md  CHANGELOG.md  CP_FPS_OPTIMIZATION_CONTRACT.md  Cargo.toml  PATH_C_ASCENDC_CONTRACT.md  QIE_ASCEND_HANDOFF.md  README.md  RELEASING.md  SESSION_HANDOFF_2026-04-30.md  ascend_native_engine_audit.md  ascend_qie_native_extension_survey.md  build.rs  cliff.toml  cuda_native_engine_audit.md  cuda_qie_perf_exploration.md  cuda_tts_perf_exploration.md  install.sh  qie_clamp_disambiguation.md  qie_f32_ref_findings.md  qie_q4_matmul_oracle_findings.md  qie_t_emb_oracle.py  release.toml
.github/workflows/: release.yml
examples/: server_config.json  voice-bot.ominix.toml
qwen-tts-ascend-sys/: Cargo.toml  build.rs
qwen-tts-ascend-sys/src/: ffi.rs  lib.rs  wrapper.rs
qwen-tts-ascend-sys/wrapper/: qwen_tts_api.h
scripts/: bfcl_test.py
scripts/inference-reference/: infer_flux2.py  infer_qwen_image_edit_op.py  infer_wan22_gguf.py  mlx-inference-qwen-image-2512.md
src/: asr.rs  config.rs  download.rs  error.rs  image.rs  llm.rs  main.rs  model_config.rs  model_registry.rs  router.rs  server_config.rs  state.rs  training.rs  tts.rs  types.rs  utils.rs  version.rs  voice_registry.rs
src/engines/: ascend.rs  asr.rs  benchmark.rs  image.rs  llm.rs  mflux.rs  mod.rs  pymlx.rs  pymlx_cosmos.rs  pymlx_flux.rs  pymlx_image_edit.rs  pymlx_wan22.rs  qwen3_tts.rs  sdcpp_image.rs  tts.rs  tts_backends.rs  tts_trait.rs  video.rs  vlm.rs
src/handlers/: audio.rs  benchmark.rs  chat.rs  download.rs  health.rs  helpers.rs  image.rs  mod.rs  models.rs  training.rs  version.rs  video.rs  vlm.rs  ws_tts.rs
src/inference/: mod.rs  request.rs  thread.rs  tts_pool.rs
src/types/: audio.rs  chat.rs  download.rs  error.rs  image.rs  mod.rs  training.rs  video.rs  vlm.rs  voice.rs
tools/: qie_5513f_analyze.py
