# NOTE: OminiX-API intentionally stays a non-workspace single crate for
# now. The qwen-tts-ascend-sys subcrate is consumed via a path-dependency
# below. This avoids dragging the root crate's (currently broken in this
# dev tree — missing `funasr-qwen4b-mlx`) manifest into every `cargo
# check` of the sub-crate. The B2 milestone contract explicitly allows
# this as the fallback when workspace is disruptive; revisit in B3 if we
# grow more sub-crates.

[package]
name = "ominix-api"
version = "1.2.0"
edition = "2021"
description = "OpenAI-compatible API server for OminiX-MLX models"
license = "MIT OR Apache-2.0"

[features]
default = ["mlx"]
mlx = []   # Apple Silicon MLX backend (macOS only)
ggml = []  # GGML/Ascend backend (Linux/Ascend, requires llama-sys + ggml-sys)
# Enable the native Ascend TTS FFI path (requires libqwen_tts_api.so).
# Off by default so Mac dev hosts build. B3 will consume this to wire
# AscendFfiTts behind an enum selector.
ascend-tts-ffi = ["qwen-tts-ascend-sys/ascend-available"]

[dependencies]
# Backend-agnostic TTS core
qwen3-tts-core = { path = "../OminiX-MLX/qwen3-tts-core" }

# Native Ascend TTS FFI (wire-up lives here in B2; handler integration in B3).
qwen-tts-ascend-sys = { path = "qwen-tts-ascend-sys" }

# GGML/Ascend backend (enabled via feature flag)
# qwen3-tts-ggml = { path = "../OminiX-MLX/qwen3-tts-ggml", optional = true }
# llama-sys = { path = "../OminiX-MLX/llama-sys", optional = true }

# HTTP Server
salvo = { version = "0.81.0", default-features = false, features = [
    "affix-state", "cors", "server", "http1", "http2", "websocket", "sse"
] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# MLX inference
mlx-rs = { path = "../OminiX-MLX/mlx-rs", features = ["metal", "accelerate"] }
mlx-sys = { path = "../OminiX-MLX/mlx-rs/mlx-sys" }
mlx-rs-core = { path = "../OminiX-MLX/mlx-rs-core", features = ["convert"] }

# Model-specific crates
qwen3-mlx = { path = "../OminiX-MLX/qwen3-mlx" }
glm47-flash-mlx = { path = "../OminiX-MLX/glm-4.7-flash-mlx" }
funasr-mlx = { path = "../OminiX-MLX/funasr-mlx" }
funasr-qwen4b-mlx = { path = "../OminiX-MLX/funasr-qwen4b-mlx" }
gpt-sovits-mlx = { path = "../OminiX-MLX/gpt-sovits-mlx" }
qwen3-tts-mlx = { path = "../OminiX-MLX/qwen3-tts-mlx" }
flux-klein-mlx = { path = "../OminiX-MLX/flux-klein-mlx" }
zimage-mlx = { path = "../OminiX-MLX/zimage-mlx" }
qwen-image-mlx = { path = "../OminiX-MLX/qwen-image-mlx" }
moxin-vlm-mlx = { path = "../OminiX-MLX/moxin-vlm-mlx" }
qwen3-vl-mlx = { path = "../OminiX-MLX/qwen3-vl-mlx" }
qwen3-asr-mlx = { path = "../OminiX-MLX/qwen3-asr-mlx" }
minicpm-sala-mlx = { path = "../OminiX-MLX/minicpm-sala-mlx" }

# Tokenization
tokenizers = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Versioning
semver = "1"
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eyre = "0.6"
thiserror = "1"
hex = "0.4"
base64 = "0.22"
tempfile = "3"
dirs = "6.0"

# Audio processing (WAV via hound, other formats via ffmpeg subprocess)
hound = "3.5"

# Image processing
image = "0.25"

# HTTP client (for model downloads)
reqwest = { version = "0.12", features = ["blocking", "json"] }

[[bin]]
name = "ominix-api"
path = "src/main.rs"
